--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,3 @@
-DATABASE_URL= process.env.DATABASE_URL || postgres://:localhost/postgres
+const connectionString = process.env.DATABASE_URL || 'postgres://:@localhost/hinriksteinar';
 PORT=3000
+SESSION_SECRET=AFE983f!9p#jc#%skjvpi34!"s
